# hello-conan-cortex-m

./: .gitignore  README.md
app/: CMakeLists.txt  conanfile.py
app/src/app/: main.c
hello/: CMakeLists.txt  HelloConfig.cmake.in  conanfile.py
hello/inc/hello/: hello.h
hello/src/hello/: hello.c
kin-conan-config/: settings.yml
kin-conan-config/profiles/: arm-none-eabi-gcc  cortex-m3
lm3s6965-hal/: CMakeLists.txt  Lm3s6965HalConfig.cmake.in  conanfile.py
